# spark_dart

./: .gitignore  README.md  cargokit_options.yaml  pubspec.yaml  x.json
.github/workflows/: precompile.yml
android/: local.properties
build_tool/: pubspec.yaml
build_tool/test/: build_tool_test.dart
lib/: constants.dart  spark_dart.dart
lib/errors/: base.dart  types.dart
lib/graphql/: client.dart
lib/lightspark_core/: lightspark_core.dart
lib/native/: spark_frost_bindings.dart
lib/services/: bolt11_spark.dart  config.dart  coop_exit.dart  deposit.dart  leaf_manager.dart  lightning.dart  signing.dart  swap.dart  time_sync.dart  transfer.dart  wallet_config.dart
lib/signer/: signer.dart  types.dart
lib/spark-readonly-client/: types.dart
lib/spark_bindings/: helper.dart  spark_bindings.dart  types.dart
lib/spark_wallet/: proto-hash.dart  proto_descriptors.dart  proto_reflection.dart  se_helper.dart  spark_wallet.dart  types.dart
lib/types/: grpc.dart  sdk_types.dart
lib/utils/: address.dart  bitcoin.dart  hashstructure.dart  hex.dart  htlc_transactions.dart  idempotency.dart  invoice_hashing.dart  keys.dart  proof.dart  (+11 more)
protos/: common.proto  dkg.proto  frost.proto  gossip.proto  mock.proto  multisig.proto  spark.proto  spark_authn.proto  spark_authn_internal.proto  spark_internal.proto  spark_token.proto  spark_token_internal.proto  spark_token_legacy.proto
rust/: Cargo.toml  build.rs  cargokit.yaml
rust/.cargo/: config.toml
rust/src/: frb_generated.rs
rust/src/api/: simple.rs
rust_builder/: pubspec.yaml
test/: spark_dart_test.dart
(+145 files in other folders)
