[package]
name = "rust_lib_spark_flutter"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
spark-frost = { git = "https://github.com/buildonspark/spark", branch = "main" }
prost = "0.13"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }